# NLP_Final_Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Final project.docx  README.md  checkpoints.dvc  docker-compose.yml  eval_SQuAD.py  main.py  pyproject.toml  render.yaml  test_mlflow_load.py  utils.py  work_division.md
.dvc/: config
.githooks/: pre-commit
.github/: pull_request_template.md
.github/workflows/: branch-name-check.yml  ci.yml  deploy-prod.yml  deploy-staging.yml  promotion-gate.yml  retrain.yml
api/: config.py  inference.py  main.py
api/routers/: data.py  health.py  qa.py
backend/: app.py  requirements.txt
data/: .gitignore  dev-v2.0.json.dvc  train-v2.0.json.dvc
dev/: dev.ipynb
docs/: data_pipeline.md  work_division.md
frontend/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: qa-flow.spec.ts
frontend/src/app/: globals.css  (+2 more)
model/: __init__.py  qa_model.py
notebooks/: training.ipynb
scripts/: download_checkpoints.py  fine_tune.py  promotion_gate.py  pull_feedback.py  setup.sh  setup_dvc.sh  test_mlflow_connection.py  train.py
slides/: package-lock.json  package.json
src/data/: augmentation.py  loader.py  preprocessing.py  splitter.py
src/evaluation/: metrics.py
src/tracking/: mlflow_setup.py
src/training/: dataset.py  trainer.py
supabase/: schema.sql
tests/: conftest.py  test_api_data.py  test_api_health.py  test_api_qa.py  test_augmentation.py  test_data_loader.py  test_inference.py  test_metrics.py  test_preprocessing.py  test_splitter.py
(+10 files in other folders)
