[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "dvc>=3.66.1",
    "dvc-gdrive>=3.0.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
